added sections in job details

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -18,4 +18,5 @@ $font-medium : 'Montserrat-Medium';
 $font-size-x-lg : 40px;
 $font-size-lg : 20px;
 $font-size-md : 14px;
-$font-size-sm : 11px;
+$font-size-sm : 12px;
+$font-size-x-sm : 10px;
