--- a/src/pages/home/_Home.scss
+++ b/src/pages/home/_Home.scss
@@ -15,7 +15,7 @@
         font-size: $font-size-x-lg ;
       }
       .sub-heading{
-        margin: 40px 0px 40px 0px ;
+        margin: 25px 0px;
       }
     .ea-container{
         flex-direction: column;
