--- a/src/uiComponents/shared/CImagesGallery/_CImagesGallery.scss
+++ b/src/uiComponents/shared/CImagesGallery/_CImagesGallery.scss
@@ -8,6 +8,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 10px 0px;
+
         .title{
             font-size: $font-size-md;
             color: $text-color;
@@ -17,6 +18,7 @@
 
             &:hover{
                 text-decoration: underline;
+                color: $text-color;
             }
 
         }
@@ -26,11 +28,30 @@
     .images-container{
         display: flex;
         justify-content: space-between;
+        max-height: 200px;
 
         .ant-image{
             width: 30%;
+            height: 100%;
+
             .ant-image-img{
-                
+                height: 100%;    
+            }
+
+        }
+
+    }
+
+    .modal-slide {
+        height: 300px;
+        width: 500px;
+
+        .ant-image{ 
+            width: 100%;
+            height: 100%;
+
+            .ant-image-img{
+                height: 100%;    
             }
 
         }
