--- a/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
+++ b/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
@@ -124,10 +124,15 @@
                     }
                     
                     .block-video {
-                        height: 400px;
+                        height: 350px;
                         width: 100%;
                         display: flex;
                         justify-content: center;
+                    }
+
+                    .block-map {
+                        width: 100%;
+                        height: 350px;
                     }
 
                     .c-list {
