--- a/src/pages/jobs/_Jobs.scss
+++ b/src/pages/jobs/_Jobs.scss
@@ -61,6 +61,7 @@
                             p{
                                 color: $white;
                                 font-size: $font-size-sm;
+                                font-family: $font-light;
                                 text-align: center;
                                 line-height: 12px;
                                 margin: 0px 0px 15px 0px;
