--- a/src/uiComponents/shared/CImagesGallery/_CImagesGallery.scss
+++ b/src/uiComponents/shared/CImagesGallery/_CImagesGallery.scss
@@ -11,7 +11,8 @@
 
         .title{
             font-size: $font-size-md; 
- 
+            margin: 0px;
+            
             &:hover{
                 text-decoration: underline;
                 color: $text-color;
