--- a/src/uiComponents/shared/CJobCard/_CJobCard.scss
+++ b/src/uiComponents/shared/CJobCard/_CJobCard.scss
@@ -22,57 +22,58 @@
         }
 
          .info-wrapper { 
-        display: flex;
-        height: 100%;
-        align-items: center;
-
-        .job-thumbnail {
-
-            max-width: 60px;
-            max-height: 60px;
-            border-radius: 5px;
-            margin: 0px 10px 0px 0px;
-
-        }
-        .info{
             display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: flex-start;
             height: 100%;
+            align-items: center;
 
-            .title-row{
-                display: flex;
-                align-items: center;
+            .job-thumbnail {
 
-                .title {
-
-                    font-size: $font-size-md;
-                    margin: 0px;
-
-                }
-
-                .location-container {
-
-                    display: flex;
-                    margin: 0px 0px 0px 10px;
-
-                .location-icon {
-
-                    max-width: 10px;
-
-                }
-
-                .location-text {
-
-                    margin: 0px 0px 0px 5px;
-                    font-size: $font-size-sm;
-
-                }
+                max-width: 60px;
+                max-height: 60px;
+                border-radius: 5px;
+                margin: 0px 10px 0px 0px;
 
             }
 
-        }
+            .info{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: flex-start;
+                height: 100%;
+
+                .title-row {
+                    display: flex;
+                    align-items: center;
+
+                    .title {
+
+                        font-size: $font-size-md;
+                        margin: 0px;
+
+                    }
+
+                    .location-container {
+
+                        display: flex;
+                        margin: 0px 0px 0px 10px;
+
+                        .location-icon {
+
+                            max-width: 10px;
+
+                        }
+
+                        .location-text {
+
+                            margin: 0px 0px 0px 5px;
+                            font-size: $font-size-sm;
+
+                        }
+
+                     }
+
+                }
 
         p,a {
 
@@ -145,6 +146,51 @@
         .tag{
             display: flex;
         }
+    }
+
+    &.box{
+        height: 220px;
+        width: 250px;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 5px 15px 5px 15px;
+
+        .info-wrapper {
+            flex-direction: column;
+
+            .job-thumbnail{
+                max-width: 80px;
+                max-height: 80px;
+            }
+
+            .info {
+                flex-direction: column;
+                justify-content: space-around;
+                height: 90px;
+                margin: 10px 0px 0px 0px;
+
+                .title-row{
+                    flex-direction: column;
+
+                    .location-container{
+                        margin: 5px 0px 0px 0px;
+                    }
+
+                }
+
+            }
+
+
+
+        }
+
+        .more-info {
+            align-self: flex-end;
+            position: absolute;
+            bottom: 5px;
+            right: 10px;
+        }
+ 
     }
     
 }
