--- a/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
+++ b/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
@@ -75,7 +75,8 @@
         display: flex;
         flex-direction: column;
         padding: 25px 35px;
-
+        max-width: 100%;
+        
         .details-header{
             display: flex;
             justify-content: space-between;
@@ -128,6 +129,14 @@
                         width: 100%;
                         display: flex;
                         justify-content: center;
+                    }
+
+                    .block-more{
+                        display: flex;
+                        flex-wrap: wrap;
+                        margin: 10px 0px 0px 0px;
+                        justify-content: space-between;
+
                     }
 
                     .block-map {
