--- a/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
+++ b/src/uiComponents/shared/CJobDetailsCard/_CJobDetailsCard.scss
@@ -107,6 +107,7 @@
             .content-section {
                 display: flex;
                 flex-direction: column;
+                width: 100%;
                 
                 .content-block {
                     display: flex;
