--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -11,3 +11,4 @@
 @import "shared/CCardWithLines/CCardWithLines";
 @import "shared/CJobDetailsCard/CJobDetailsCard";
 @import "shared/CImagesGallery/CImagesGallery";
+@import "shared/CJobsCarousel/CJobsCarousel";
