--- a/src/uiComponents/shared/CJobsCarousel/_CJobsCarousel.scss
+++ b/src/uiComponents/shared/CJobsCarousel/_CJobsCarousel.scss
@@ -1,9 +1,15 @@
 .c-carousel{
     overflow-x: hidden;
     width: 100%;
-    
+
     .swiper-button-prev, .swiper-button-next {
         color: $primary;
+
+        &::after ,  &::before {
+
+            font-size: 22px;
+
+        }
     }
 
     .swiper-slide {
@@ -13,7 +19,7 @@
         .c-job-card{ 
 
             &.box {
-            width: 100%;
+             width: 100%;
 
             }   
 
