new signup design is completed

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -436,3 +436,40 @@ img{
 }
 
 
+// custom radio buttons
+.ant-radio-wrapper:hover .ant-radio, .ant-radio:hover .ant-radio-inner, .ant-radio-input:focus + .ant-radio-inner {
+  border-color: $primary;
+}
+.ant-radio-checked {
+
+  .ant-radio-inner {
+
+    border-color: $primary;
+    &::after{ 
+      background: $primary;
+
+    }
+
+    &:focus{
+      border-color: $primary;
+    }
+
+  }
+
+  &::after {
+
+    border-color: $primary;
+    background: $primary;
+  
+  }
+
+}
+
+.ant-radio-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.ant-radio-wrapper {
+  margin: 0px 0px 10px 0px;
+}
