--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -13,123 +13,7 @@
     &.no-shadow{
         box-shadow: none;
     }
-    .wrapper{
-        width: 190px;
-        height: 190px;
-        border-radius: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.1s linear all;
-        margin-bottom: 50px;
-    .user-type{
-        width: 170px;
-        height: 170px;
-        border-radius: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        cursor: pointer;
-        transition: 0.1s linear all;
-        box-shadow: 0 0 3px 0px;
-        a{
-            :hover{
-                text-decoration: none !important;
-            }
-        }
-        &.seeker{
-            background: rgb(200,100,221);
-            background: linear-gradient(0deg, rgba(200,100,221,1) 0%, rgba(255,36,94,1) 100%);
-            &::after{
-                box-shadow: 0px 0px 25px 3px #c864dd;
-                -webkit-box-shadow:0px 0px 25px 3px #c864dd;
-                -moz-box-shadow: 0px 0px 25px 3px #c864dd;
-            }
-            .inner-container{
-                p{
-                    color: $primary;
-                }
-            }
-        }
-        &.employer{
-            background: rgb(67,185,235);
-            background: linear-gradient(0deg, rgba(67,185,235,1) 28%, rgba(64,61,244,1) 98%);
-            &::after{
-                box-shadow: 0px 0px 25px 3px rgb(64,61,244);
-                -webkit-box-shadow:0px 0px 25px 3px rgb(64,61,244);
-                -moz-box-shadow: 0px 0px 25px 3px rgb(64,61,244);
-            }
-            .inner-container{
-                p{
-                    color: rgb(67,185,235);
-                }
-            }
-        }
-        &.agency{
-            background: rgb(106,210,89);
-            background: linear-gradient(0deg, rgba(106,210,89,1) 0%, rgba(212,249,39,1) 79%, rgba(249,249,40,1) 98%);
-            &::after{
-                box-shadow: 0px 0px 25px 3px rgba(106,210,89,1);
-                -webkit-box-shadow:0px 0px 25px 3px rgba(106,210,89,1);
-                -moz-box-shadow: 0px 0px 25px 3px rgba(106,210,89,1);
-            }
-            .inner-container{
-                p{
-                    color: rgba(106,210,89,1);
-                }
-            }
-        }
-        span{
-            width: 140px;
-            height: 140px;
-            border-radius: 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: $white;
-            transition: 0.2s linear all;
-        .inner-container{
-            width: 140px;
-            height: 140px;
-            border-radius: 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: $white;
-            
-            box-shadow: 4px 7px 8px -8px;
-            p{
-                font-size: 18px;
-                margin-top: 5px;
-                font-family: $font-medium !important;
-            }
-        }
-    }
-        &:hover{
-            width: 180px;
-            height: 180px;
-            span{
-                width: 150px;
-                height: 150px;
-                border-radius: 86.5px;
-            }
-        }
-        &:after {
-            content: "";
-            width: 122px;
-            height: 0px;
-            margin-top: 98px;
-            margin-left: 5px;
-            display: block;
-            position: absolute;
-            z-index: -1;
-            bottom: -21px;
-          }
-}
-    }
+ 
     &.with-form{
         width: 1100px;
         border-radius: 20px ;
@@ -141,6 +25,7 @@
         position: relative;
         overflow: hidden;
         box-shadow: 0 0 16px #00000026;
+
     .first-container{
         width: 280px;
         background: transparent url("../../assets/images/auth/signup-back.png") 0% 0% no-repeat padding-box;
@@ -152,13 +37,32 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        &.bg-2{
-            background: transparent url("../../assets/images/auth/signup-ban-2.jpg") 0% 0% no-repeat padding-box;
-            background-size: cover;
+
+        &.role-container{
+            width: 200px;
+            height: 100%;
+            
         }
+
+        &.bg-2{
+
+            background: transparent url("../../assets/images/auth/signup-ban-2.jpg") 0% 0% no-repeat padding-box;
+            background-size: 100% 100%;
+
+        }
+
+        &.role-select {
+
+            background: transparent url("../../assets/images/auth/sign-up-main-back.png") 0% 0% no-repeat padding-box;
+            background-size: 100% 100%;
+            padding: 40px 15px;
+            justify-content: flex-start;
+        }
+
         img{
             width: 230px;
         }
+
         h3{
             // text-decoration: underline;
             // text-underline-position: under;
@@ -211,6 +115,18 @@
         max-width: inherit;
         .c-button{
             align-self: flex-end;
+        }
+    }
+
+    &.role-container{
+        width: 800px;
+        height: 550px;
+
+        .second-container{
+            
+            height: 500px;
+            justify-content: space-between;
+            
         }
     }
 }
