--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -15,10 +15,10 @@
     }
  
     &.with-form{
-        width: 1100px;
+        width: 1020px;
         border-radius: 20px ;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
         padding:0px !important;
         height: 650px;
@@ -110,8 +110,8 @@
     }
     }
     .second-container{
-        width: 800px;
-        padding: 50px 70px 50px 70px;
+        width: 740px;
+        padding: 50px 50px 50px 50px;
         max-width: inherit;
         .c-button{
             align-self: flex-end;
