--- a/src/uiComponents/shared/CButton/_CButtons.scss
+++ b/src/uiComponents/shared/CButton/_CButtons.scss
@@ -13,15 +13,27 @@
     transition: 0.2s all linear;
     background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
 
+    
     span{
         color:$white;
         transition: 0.2s all linear;
         font-family: $font-medium !important;
     }
+
+    .animated-icon{
+        padding: 0px 0px 0px 5px;
+        transition: all 0.3s linear;
+    }   
+
     &:hover{
         background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
+        
+        .animated-icon{ 
+            padding: 0px 0px 0px 15px;
+        }
 
     }
+
     &:focus{
         background: transparent linear-gradient(90deg, #FF245E 0%, #C864DD 100%) 0% 0% no-repeat padding-box;
 
