--- a/src/uiComponents/shared/CBannerWithImages/_CBannerWithImages.scss
+++ b/src/uiComponents/shared/CBannerWithImages/_CBannerWithImages.scss
@@ -5,11 +5,11 @@
         justify-content: flex-end;
         overflow: hidden;
         >div {
-                width: 33.3333%;
+                width: 32%;
         }
         img{
-            width: 32%;
-            height: auto;
+            width: 100%;
+            height: 100%;
         }
     }
 }
