--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -268,10 +268,13 @@ img{
   box-shadow: 0 0 16px rgba(0 ,0, 0 ,0.3);
   background: #ffffff !important;
   width: 300px;
+  height: 35px !important;
   input {
       font-size: 15px;
       box-shadow: none!important;
+      height: 30px;
   }
+
 }
 
 // custom phone number input 
@@ -381,24 +384,32 @@ img{
   } 
   label{
       font-family: $font-light;
+      display: flex;
+      align-items: center;
+
     &.required:after {
       content:"  *";
       margin:0px 5px 0px 3px;
       color: red;
       }
     }
+
     .c-label{
       display: flex;
       align-items: end;
     }
+    
   .alt-text{
    font-size: $font-size-sm;
   }
+
 .ant-checkbox-wrapper {
    span{
        font-size: $font-size-sm;
    }
+
 }
+
 }
 
 // custom divider 
