--- a/src/uiComponents/shared/CBannerWithImages/_CBannerWithImages.scss
+++ b/src/uiComponents/shared/CBannerWithImages/_CBannerWithImages.scss
@@ -8,8 +8,7 @@
                 width: 32%;
         }
         img{
-            width: 100%;
-            height: 100%;
+            width: 33.333333333%;
         }
     }
 }
