modal form and dashboard form

--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -5,3 +5,4 @@
 @import 'employerAndAgencies/EmployerAndAgencies';
 @import 'jobSeekers/JobSeekers';
 @import 'signup/SignUp';
+@import 'dashboardForm/dashboardFrom';
