--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -12,3 +12,4 @@
 @import "shared/CJobDetailsCard/CJobDetailsCard";
 @import "shared/CImagesGallery/CImagesGallery";
 @import "shared/CJobsCarousel/CJobsCarousel";
+@import "shared/CTaskList/CTaskList.scss";
