modal forms notification setiings componets created

--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -12,3 +12,15 @@
 @import "shared/CJobDetailsCard/CJobDetailsCard";
 @import "shared/CImagesGallery/CImagesGallery";
 @import "shared/CJobsCarousel/CJobsCarousel";
+
+
+
+// dev imports//
+
+@import "devComponents/AdditionalForm/additionalForm";
+@import "devComponents/ModalForms/modalFrom";
+@import "devComponents/NotificationSetting/notSettings";
+@import "devComponents/expModalForm/expForm";
+@import "devComponents/ModalCertificateForm/ModalCertificateForm";
+
+
