pricing screen done

--- a/src/pages/TestPage/TaskList.scss
+++ b/src/pages/TestPage/TaskList.scss
@@ -2,8 +2,6 @@
   width: 450px;
   height: 600px;
   overflow-y: scroll;
-
-  margin-top: 3.5em;
 }
 .task-btn > a {
   margin-left: 8px;
@@ -19,7 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline: 1em;
+  padding: 1em;
 }
 .task-header-left {
   display: flex;
@@ -50,5 +48,5 @@
   margin-left: 0.6em;
 }
 .ant-divider {
-  margin-block: 1em;
+  margin-block: 0em;
 }
