--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -13,3 +13,5 @@
 @import "shared/CImagesGallery/CImagesGallery";
 @import "shared/CJobsCarousel/CJobsCarousel";
 @import "shared/CTaskList/CTaskList.scss";
+@import "shared/CChatListItem/ChatListItem.scss";
+@import "shared/CInterviewCard/CinterviewCard.scss";
