--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -5,3 +5,11 @@
 @import 'employerAndAgencies/EmployerAndAgencies';
 @import 'jobSeekers/JobSeekers';
 @import 'signup/SignUp';
+
+
+
+
+
+// Responsive Sass imports
+
+@import 'pricing/Responsive';
