--- a/src/pages/pricing/_Pricing.scss
+++ b/src/pages/pricing/_Pricing.scss
@@ -1,128 +1,149 @@
-.pricing-main {
-    margin: auto;
-    display: flex;
-    padding: 40px 30px;
-    color: $text-color;
-    font-size: $font-size-md;
+.pricing-container {
+    padding: 30px 10px 30px 50px;
 
-    & .color-blue {
-        color: $blue;
-        font-size: $font-size-lg;
-    }
+    .heading-section {
+        padding: 60px 0;
 
-    & .pricing-section {
-        width: 70%;
-
-        & .pricing-row {
-            display: flex;
-
-            & .pricing-card {
-                width: 100%;
-                border-left: 1px solid $border-color;
-
-                &:first-child {
-                    border-left: none
-                }
-
-                &:last-child {
-                    border-right: 1px solid $border-color;
-                }
-
-                & .pricing-header {
-                    width: 100%;
-
-                    & .top-items-head {
-
-                        height: 50px;
-                        text-align: center;
-                        width: 100%;
-                    }
-
-                }
-
-                & .pricing-items {
-
-                    & .pricings {
-                        text-align: center;
-                        min-height: 45px;
-                        vertical-align: middle;
-
-                        & .check-icon {
-                            color: $green;
-                            font-size: 25px;
-                        }
-                    }
-
-                    & .pricing-typs {
-
-                        min-height: 45px;
-                        vertical-align: middle;
-                    }
-
-                }
-            }
+        & p {
+            color: $text-color;
+            font-size: $font-size-x-lg;
+            font-family: $font-medium;
 
         }
-
     }
 
 
-    & .align-center {
-        display: grid;
-        place-items: center;
-    }
-
-    & .pricing-image {
-        width: 30%;
-        padding: 0 20px;
-
-        & .image-section {
-            padding: 0 100px 0 0;
-
-            & img {
-                width: 100%;
-                min-width: 290px;
-
-            }
-        }
-    }
-}
-
-
-.pricing-page {
-    .section-2 {
+    .pricing-main {
+        margin: auto;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        padding: 50px 0 !important;
+        color: $text-color;
+        font-size: $font-size-md;
 
-        .left-side {
-            left: 50px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-
-            .title {
-                font-size: $font-size-lg;
-                font-family: $font-bold;
-            }
-
-            .description {
-                font-size: $font-size-md;
-            }
+        & .color-blue {
+            color: $blue;
+            font-size: $font-size-lg;
         }
 
-        .right-side {
-            position: relative;
-            flex: 2;
-            min-width: 340px;
+        & .pricing-section {
+            height: 70vh;
 
-            .slider-btn {
-                position: absolute;
-                width: 300px;
-                bottom: 87px;
-                left: 157px;
+            width: 60%;
+            height: 100%;
+
+            & .pricing-row {
+                display: flex;
+                height: 100%;
+
+                & .pricing-card {
+                    width: 100%;
+                    border-left: 1px solid $border-color;
+                    height: 100%;
+
+                    &:first-child {
+                        border-left: none
+                    }
+
+                    &:last-child {
+                        border-right: 1px solid $border-color;
+                    }
+
+                    & .pricing-header {
+                        width: 100%;
+
+                        & .top-items-head {
+
+                            height: 50px;
+                            text-align: center;
+                            width: 100%;
+                        }
+
+                    }
+
+                    & .pricing-items {
+
+                        & .pricings {
+                            text-align: center;
+                            min-height: 45px;
+                            vertical-align: middle;
+
+                            & .check-icon {
+                                color: $green;
+                                font-size: 25px;
+                            }
+                        }
+
+                        & .pricing-typs {
+
+                            min-height: 45px;
+                            vertical-align: middle;
+                        }
+
+                    }
+                }
+
+            }
+
+        }
+
+
+        & .align-center {
+            display: grid;
+            place-items: center;
+        }
+
+        & .pricing-image {
+            width: 40%;
+            padding: 0 20px;
+
+            & .image-section {
+
+
+                & img {
+                    width: 80%;
+                    margin: -30px 0 0 0;
+                    min-width: 290px;
+
+                }
+            }
+        }
+    }
+
+
+    .pricing-page {
+        .section-2 {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            padding: 50px 0 !important;
+
+            .left-side {
+                left: 50px;
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+
+                .title {
+                    font-size: $font-size-lg;
+                    font-family: $font-bold;
+                }
+
+                .description {
+                    font-size: $font-size-md;
+                }
+            }
+
+            .right-side {
+                position: relative;
+                flex: 2;
+                min-width: 340px;
+
+                .slider-btn {
+                    position: absolute;
+                    width: 300px;
+                    bottom: 87px;
+                    left: 157px;
+                }
             }
         }
     }
