--- a/src/pages/pricing/_Responsive.scss
+++ b/src/pages/pricing/_Responsive.scss
@@ -1,51 +1,62 @@
 @media screen and (max-width:480px) {
 
-    .pricing-main {
-        display: block;
-        padding: 0 10px;
-        font-size: $font-size-sm;
+    .pricing-container {
+        padding: 30px 10px;
 
-        & .pricing-section {
-            width: 100%;
+        .pricing-main {
+            display: block;
+            font-size: $font-size-sm;
 
-            & .pricing-row {
-                & .pricing-card {
-                    & .pricing-items {
-                        & .pricings {
-                            & .check-icon {
-                                color: #7ED957;
-                                font-size: 18px;
+            & .pricing-section {
+                
+                width: 100%;
+
+                & .pricing-row {
+                    & .pricing-card {
+                        & .pricing-items {
+                            & .pricings {
+                                & .check-icon {
+                                    color: #7ED957;
+                                    font-size: 18px;
+                                }
                             }
                         }
                     }
                 }
             }
-        }
 
-        & .pricing-image {
+            & .pricing-image {
 
-            width: auto;
-            padding: 0;
-
-            & .image-section {
+                width: auto;
                 padding: 0;
+
+                & .image-section {
+                    padding: 0;
+
+                    & img{
+                    margin: unset;
+                    width: 100%;
+
+                    }
+                }
+            }
+
+            & .color-blue {
+                color: $blue;
+                font-size: $font-size-sm;
+            }
+
+        }
+
+        .pricing-page {
+            & .section-2 {
+                & .left-side {
+                    left: 0;
+                    padding: 0 10px;
+                }
             }
         }
 
-        & .color-blue {
-            color: $blue;
-            font-size: $font-size-sm;
-        }
-
-    }
-
-    .pricing-page {
-        & .section-2 {
-            & .left-side {
-                left: 0;
-                padding: 0 10px;
-            }
-        }
     }
 }
 
@@ -53,37 +64,48 @@
 
 @media screen and (min-width:480px) and (max-width:768px) {
 
-    .pricing-main {
-        display: block;
-        padding: 0 20px;
-        font-size: $font-size-sm;
+    .pricing-container {
+        padding: 30px 10px;
 
-        & .pricing-section {
-            width: 100%;
-        }
+        .pricing-main {
+            display: block;
+            font-size: $font-size-sm;
 
-        & .pricing-image {
+            & .pricing-section {
+                width: 100%;
+                
 
-            width: auto;
-            padding: 0 ;
-
-            & .image-section {
-                padding: 0;
             }
+
+            & .pricing-image {
+
+                width: auto;
+                padding: 0;
+
+                & .image-section {
+                    padding: 0;
+
+                    & img{
+                        margin: unset;
+                        width: 100%;
+    
+                        }
+                }
+            }
+
+            & .color-blue {
+                color: $blue;
+                font-size: $font-size-md;
+            }
+
         }
 
-        & .color-blue {
-            color: $blue;
-            font-size: $font-size-md;
-        }
-
-    }
-
-    .pricing-page {
-        & .section-2 {
-            & .left-side {
-                left: 0;
-                padding: 0 10px;
+        .pricing-page {
+            & .section-2 {
+                & .left-side {
+                    left: 0;
+                    padding: 0 10px;
+                }
             }
         }
     }
