footer responsive done

--- a/src/uiComponents/_index.scss
+++ b/src/uiComponents/_index.scss
@@ -23,4 +23,8 @@
 @import "devComponents/expModalForm/expForm";
 @import "devComponents/ModalCertificateForm/ModalCertificateForm";
 
+// Reponsive Imports
+
+@import "CFooter/Responsive"
+
 
