--- a/src/uiComponents/CFooter/_CFooter.scss
+++ b/src/uiComponents/CFooter/_CFooter.scss
@@ -19,7 +19,8 @@
                 justify-content: space-between;
             }
             .logo{
-                width: 300px;
+                max-width: 300px;
+                width: 100%;
             }
             h3{
                 font-family: $font-bold  !important;
