--- a/src/pages/login/_Login.scss
+++ b/src/pages/login/_Login.scss
@@ -28,4 +28,10 @@
     background-size: cover;
     min-height: calc(100vh - 100px);
     padding: 25px 0px;
-}   
+}  
+
+@media only screen and (max-width: 991px) {
+    .auth-wrapper{
+        padding: 25px 5px;
+    }
+}
