--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -23,7 +23,7 @@
         padding:0px !important;
         height: 650px;
         position: relative;
-        overflow: hidden;
+        // overflow: hidden;
         box-shadow: 0 0 16px #00000026;
 
     .first-container{
@@ -110,7 +110,8 @@
     }
     }
     .second-container{
-        width: 740px;
+        max-width: 740px;
+        width: 100%;
         padding: 50px 50px 50px 50px;
         max-width: inherit;
         .c-button{
