--- a/src/uiComponents/CFooter/_Responsive.scss
+++ b/src/uiComponents/CFooter/_Responsive.scss
@@ -4,6 +4,7 @@
             padding: 2em;
             .info{
                 flex-basis: 100%;
+                margin: 0 0 0 0 !important;
             }
             ul{
                 flex: 4;
@@ -41,8 +42,9 @@
                 margin: 0 !important;
             }
             ul{
-                flex: 4;
+                // flex-basis: 100%;
                 margin-right: 0;
+                // text-align: center;
                 .logo{
                     margin-bottom: 4px;
                 }
