image fix on signup

--- a/src/pages/signup/_SignUp.scss
+++ b/src/pages/signup/_SignUp.scss
@@ -23,7 +23,7 @@
         padding:0px !important;
         height: 650px;
         position: relative;
-        // overflow: hidden;
+        overflow: hidden;
         box-shadow: 0 0 16px #00000026;
 
     .first-container{
@@ -61,6 +61,7 @@
 
         img{
             width: 230px;
+            
         }
 
         h3{
